# Flask-localstack

./: Dockerfile  Dockerfile-test  README.md  config.py  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.sh  run_local.sh  setup_s3.sh  test.sh  wsgi.py
service/: __init__.py  handlers.py
tests/: test_handlers.py  test_wsgi.py
