[tool.poetry]
name = "flask-localstack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycodestyle = "^2.6.0"
flake8 = "^3.8.4"
lizard = "^1.17.7"
Flask = "^1.1.2"
Flask-API = "^2.0"

[tool.poetry.dev-dependencies]
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
